feat: desktop contents animation and mobile side panel animation and optimization
desktop view: now have a smooth transition animation when opening the
nav and opening the side panel.. mobile view: when switching from main
content to side panel the left nav bar automatically closes, initially,
but when the nav bar reopened to switch side panel articles will now not
auto close the nav bar for easy switching since when it has autoclose
feature when scrolling or on pointer down. optimization: changed from
functional logic to class to easily handle each function and for better
optimization like: - caches by initializing the element selectors needed
.-  batch update for the styles that need to change all at once like
switching aritcles in side panel. Utilizes raf for better performance
for repaints and heavy reflows - handle timeout to match animation in
order to avoid staggering and throttling the timeout to wait for the
animation to finish before starting another animation. -  refactor:
created a contant classes for selectors, class used for toggling, and
articles for better readability and maintainability.

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -5557,6 +5557,7 @@
         }
 
         handleArticleSwitch(articleKey) {
+          // throttling: to have uninterrupted transitioning
           if (this.isTransitioning) return;
           this.isTransitioning = true;
 
@@ -5571,7 +5572,7 @@
             // Reset transition flag after animation completes
             setTimeout(() => {
               this.isTransitioning = false;
-            }, 300); // Match your CSS transition duration
+            }, 200); // Match your CSS transition duration
           });
         }
 
@@ -5686,353 +5687,3 @@
     <script src="../vendors/glightbox/glightbox.min.js"></script>
   </body>
 </html>
-
-<!-- document.addEventListener('DOMContentLoaded', function () {
-        // initial value when you first open the nav
-        // this will track how many column is currently open
-        // in order for the toggle to save the current state of the side bar
-        let leftNavTracker = 'open-just-left-nav';
-
-        const mobileMediaQuery = window.matchMedia('(max-width: 768px)');
-        const leftNavBar = document.getElementById('left-nav-bar');
-        const pageWrapper = document?.getElementById('page-wrapper');
-        const toggleInputElement = document?.getElementById('toggle-navbar');
-
-        document.addEventListener('click', function (event) {
-          const toggleInput = event.target.closest('#toggle-navbar');
-          const isBothOpen = toggleInput?.classList.contains('open-left-nav-n-content');
-          const isJustNavOpen = toggleInput?.classList.contains('open-just-left-nav');
-
-          if (leftNavBar && isBothOpen && mobileMediaQuery.matches) {
-            leftNavTracker = 'open-left-nav-n-content';
-            toggleInput.classList.toggle(leftNavTracker);
-
-            pageWrapper.classList.toggle('nav-n-content');
-
-            leftNavBar.classList.toggle('left-nav-collapse');
-          }
-
-          if (toggleInput && (!isJustNavOpen || !isBothOpen)) {
-            toggleInput.classList.toggle(leftNavTracker);
-            const pageWrapperClass = leftNavTracker === 'open-just-left-nav' ? 'nav-only' : 'nav-n-content';
-            pageWrapper.classList.toggle(pageWrapperClass);
-          }
-
-          const leftNavBtn = event.target.closest('#left-nav-bar button');
-          if (leftNavBtn) {
-            const leftContent = document.getElementById('left-content');
-
-            const customizeArticle = document.querySelector('.customize-article');
-            const priceArticle = document.querySelector('.price-article');
-            const calendarArticle = document.querySelector('.calendar-article');
-            const inboxArticle = document.querySelector('.inbox-article');
-            const settingsArticle = document.querySelector('.settings-article');
-
-            // logic for switching articles
-            switch (leftNavBtn.ariaLabel) {
-              case 'customize':
-                if (!isBothOpen) {
-                  leftNavTracker = 'open-left-nav-n-content';
-                  toggleInputElement.classList.replace('open-just-left-nav', 'open-left-nav-n-content');
-                  pageWrapper.classList.replace('nav-only', 'nav-n-content');
-                  mobileMediaQuery.matches && leftNavBar.classList.add('left-nav-collapse');
-                }
-
-                customizeArticle.style.zIndex = 3;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '100%';
-                break;
-
-              case 'price':
-                if (!isBothOpen) {
-                  leftNavTracker = 'open-left-nav-n-content';
-                  toggleInputElement.classList.replace('open-just-left-nav', 'open-left-nav-n-content');
-                  pageWrapper.classList.replace('nav-only', 'nav-n-content');
-                  mobileMediaQuery.matches && leftNavBar.classList.add('left-nav-collapse');
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 3;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '0';
-                break;
-
-              case 'calendar':
-                if (!isBothOpen) {
-                  leftNavTracker = 'open-left-nav-n-content';
-                  toggleInputElement.classList.replace('open-just-left-nav', 'open-left-nav-n-content');
-                  pageWrapper.classList.replace('nav-only', 'nav-n-content');
-                  mobileMediaQuery.matches && leftNavBar.classList.add('left-nav-collapse');
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 3;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '0';
-                break;
-
-              case 'inbox':
-                if (!isBothOpen) {
-                  leftNavTracker = 'open-left-nav-n-content';
-                  toggleInputElement.classList.replace('open-just-left-nav', 'open-left-nav-n-content');
-                  pageWrapper.classList.replace('nav-only', 'nav-n-content');
-                  mobileMediaQuery.matches && leftNavBar.classList.add('left-nav-collapse');
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 3;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '0';
-                break;
-
-              case 'settings':
-                if (!isBothOpen) {
-                  leftNavTracker = 'open-left-nav-n-content';
-                  toggleInputElement.classList.replace('open-just-left-nav', 'open-left-nav-n-content');
-                  pageWrapper.classList.replace('nav-only', 'nav-n-content');
-                  mobileMediaQuery.matches && leftNavBar.classList.add('left-nav-collapse');
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 3;
-
-                customizeArticle.style.height = '0';
-                break;
-              default:
-                return;
-            }
-          }
-
-          // logic for closing the left sidebar
-
-          const closeArticle = event.target.closest('button[aria-label="close article"]');
-          if (closeArticle) {
-            leftNavTracker = 'open-just-left-nav';
-
-            toggleInputElement.classList.replace('open-left-nav-n-content', 'open-just-left-nav');
-            pageWrapper.classList.replace('nav-n-content', 'nav-only');
-
-            if (mobileMediaQuery.matches) {
-              toggleInputElement.classList.remove('open-just-left-nav');
-              pageWrapper.classList.remove('nav-only');
-              leftNavBar.classList.toggle('left-nav-collapse');
-            }
-          }
-        });
-
-        document.addEventListener('touchstart', function (event) {
-          const mainElement = event.target.closest('main');
-          const asideElement = event.target.closest('aside');
-          console.log(asideElement);
-          if (!mobileMediaQuery.matches) return;
-
-          if (mainElement && toggleInputElement.classList.contains('open-just-left-nav')) {
-            toggleInputElement.classList.remove('open-just-left-nav');
-            pageWrapper.classList.remove('nav-only');
-            return;
-          }
-
-          if (asideElement && !leftNavBar.classList.contains('left-nav-collapse')) {
-            leftNavBar.classList.add('left-nav-collapse');
-            return;
-          }
-
-          return;
-        });
-      }); -->
-
-<!-- itteration 2 -->
-
-<!-- // TODO: ADD INERT TO THE INACTIVE GRID COLUMNS,OPACITY 0 , VISIBILITY hidden
-      // being: NAV_ONLY means SELECTORS.LEFT_CONTENT is inactive
-      // in mobileMediaQuery case true means NAV_CONTENT means mainElement is inactive
-      // for the acticles. The one that has the highest z-index is the one that is active rest is inactive
-      document.addEventListener('DOMContentLoaded', function () {
-        // CSS classes and selectors
-        const SELECTORS = {
-          PAGE_WRAPPER: '#page-wrapper',
-          LEFT_CONTENT: '#left-content',
-          LEFT_NAV_BAR: '#left-nav-bar',
-          TOGGLE_INPUT: '#toggle-navbar',
-          NAV_BUTTON: '#left-nav-bar button',
-          CLOSE_BUTTON: 'button[aria-label="close article"]',
-        };
-
-        const CLASSES = {
-          NAV_ONLY: 'nav-only',
-          NAV_CONTENT: 'nav-n-content',
-          NAV_COLLAPSE: 'left-nav-collapse',
-          CONTENT_OPEN: 'content-open',
-          TRANSITIONING: 'is-transitioning',
-        };
-
-        // initial value when you first open the nav
-        // this will track how many column is currently open
-        // in order for the toggle to save the current state of the side bar
-        let leftNavTracker = CLASSES.NAV_ONLY;
-        let rafId = null;
-
-        const mobileMediaQuery = window.matchMedia('(max-width: 991px)');
-        const leftNavBar = document?.querySelector(SELECTORS.LEFT_NAV_BAR);
-        const pageWrapper = document?.querySelector(SELECTORS.PAGE_WRAPPER);
-        const toggleInputElement = document?.querySelector(SELECTORS.TOGGLE_INPUT);
-        const leftContent = document?.querySelector(SELECTORS.LEFT_CONTENT);
-
-        document.addEventListener('click', function (event) {
-          const toggleInput = event.target.closest(SELECTORS.TOGGLE_INPUT);
-          const isBothOpen = toggleInput?.classList.contains(CLASSES.NAV_CONTENT);
-          const isJustNavOpen = toggleInput?.classList.contains(CLASSES.NAV_ONLY);
-
-          if (leftNavBar && isBothOpen && mobileMediaQuery.matches) {
-            leftNavTracker = CLASSES.NAV_CONTENT;
-            toggleInput.classList.toggle(leftNavTracker);
-
-            leftNavBar.classList.toggle(CLASSES.NAV_COLLAPSE);
-          }
-
-          if (toggleInput && (!isJustNavOpen || !isBothOpen)) {
-            toggleInput.classList.toggle(leftNavTracker);
-          }
-
-          const leftNavBtn = event.target.closest(SELECTORS.NAV_BUTTON);
-          if (leftNavBtn) {
-            const customizeArticle = document.querySelector('.customize-article');
-            const priceArticle = document.querySelector('.price-article');
-            const calendarArticle = document.querySelector('.calendar-article');
-            const inboxArticle = document.querySelector('.inbox-article');
-            const settingsArticle = document.querySelector('.settings-article');
-
-            // logic for switching articles
-            switch (leftNavBtn.ariaLabel) {
-              case 'customize':
-                if (!isBothOpen) {
-                  leftNavTracker = CLASSES.NAV_CONTENT;
-                  toggleInputElement.classList.replace(CLASSES.NAV_ONLY, CLASSES.NAV_CONTENT);
-                  mobileMediaQuery.matches && leftNavBar.classList.add(CLASSES.NAV_COLLAPSE);
-                }
-
-                customizeArticle.style.zIndex = 3;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '100%';
-                break;
-
-              case 'price':
-                if (!isBothOpen) {
-                  leftNavTracker = CLASSES.NAV_CONTENT;
-                  toggleInputElement.classList.replace(CLASSES.NAV_ONLY, CLASSES.NAV_CONTENT);
-                  mobileMediaQuery.matches && leftNavBar.classList.add(CLASSES.NAV_COLLAPSE);
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 3;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '0';
-                break;
-
-              case 'calendar':
-                if (!isBothOpen) {
-                  leftNavTracker = CLASSES.NAV_CONTENT;
-                  toggleInputElement.classList.replace(CLASSES.NAV_ONLY, CLASSES.NAV_CONTENT);
-                  mobileMediaQuery.matches && leftNavBar.classList.add(CLASSES.NAV_COLLAPSE);
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 3;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '0';
-                break;
-
-              case 'inbox':
-                if (!isBothOpen) {
-                  leftNavTracker = CLASSES.NAV_CONTENT;
-                  toggleInputElement.classList.replace(CLASSES.NAV_ONLY, CLASSES.NAV_CONTENT);
-                  mobileMediaQuery.matches && leftNavBar.classList.add(CLASSES.NAV_COLLAPSE);
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 3;
-                settingsArticle.style.zIndex = 2;
-
-                customizeArticle.style.height = '0';
-                break;
-
-              case 'settings':
-                if (!isBothOpen) {
-                  leftNavTracker = CLASSES.NAV_CONTENT;
-                  toggleInputElement.classList.replace(CLASSES.NAV_ONLY, CLASSES.NAV_CONTENT);
-                  mobileMediaQuery.matches && leftNavBar.classList.add(CLASSES.NAV_COLLAPSE);
-                }
-
-                customizeArticle.style.zIndex = 2;
-                priceArticle.style.zIndex = 2;
-                calendarArticle.style.zIndex = 2;
-                inboxArticle.style.zIndex = 2;
-                settingsArticle.style.zIndex = 3;
-
-                customizeArticle.style.height = '0';
-                break;
-              default:
-                return;
-            }
-          }
-
-          // logic for closing the left sidebar
-          const closeArticle = event.target.closest(SELECTORS.CLOSE_BUTTON);
-          if (closeArticle) {
-            leftNavTracker = CLASSES.NAV_ONLY;
-
-            toggleInputElement.classList.replace(CLASSES.NAV_CONTENT, CLASSES.NAV_ONLY);
-
-            if (mobileMediaQuery.matches) {
-              toggleInputElement.classList.remove(CLASSES.NAV_ONLY);
-              leftNavBar.classList.toggle(CLASSES.NAV_COLLAPSE);
-            }
-          }
-        });
-
-        document.addEventListener('touchstart', function (event) {
-          const mainElement = event.target.closest('main');
-          const asideElement = event.target.closest(SELECTORS.LEFT_CONTENT);
-          if (!mobileMediaQuery.matches) return;
-
-          if (mainElement && toggleInputElement.classList.contains(CLASSES.NAV_ONLY)) {
-            toggleInputElement.classList.remove(CLASSES.NAV_ONLY);
-            return;
-          }
-
-          if (asideElement && !leftNavBar.classList.contains(CLASSES.NAV_COLLAPSE)) {
-            leftNavBar.classList.add(CLASSES.NAV_COLLAPSE);
-            return;
-          }
-
-          return;
-        });
-      }); -->
